added pagination to user domain